[project]
name = "embody-td"
version = "5.0.277"
description = "TD component to add json filestructure and embedded Model Context Protocol (MCP) server."
readme = "README.md"
requires-python = ">=3.11"

authors = [
    {name = "Julian Krumow", email = "julian.krumow@artcom.de"},
]

dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.tox"]
